[gd_scene load_steps=2 format=3 uid="uid://bpk8wmj4n2yrq"]

[ext_resource type="Script" path="res://scripts/ui/spirit_info_ui.gd" id="1_script"]

[node name="SpiritInfoUI" type="PanelContainer"]
custom_minimum_size = Vector2(220, 0)
offset_right = 220.0
offset_bottom = 280.0
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="HeaderContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "Spirit Name"

[node name="TierLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "‚òÖ‚òÖ"

[node name="ElementLabel" type="Label" parent="MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üî•"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HPLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "‚ù§Ô∏è HP: 100"

[node name="ATKLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "‚öîÔ∏è ATK: 15"

[node name="SPDLabel" type="Label" parent="MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "üí® SPD: 1.0"

[node name="XPContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="XPLabel" type="Label" parent="MarginContainer/VBoxContainer/XPContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "XP: 50 / 100"

[node name="XPProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/XPContainer"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ItemContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ItemIconLabel" type="Label" parent="MarginContainer/VBoxContainer/ItemContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "‚öîÔ∏è"

[node name="ItemNameLabel" type="Label" parent="MarginContainer/VBoxContainer/ItemContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.7, 0.9, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Iron Sword"

[node name="AbilityContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="AbilityNameLabel" type="Label" parent="MarginContainer/VBoxContainer/AbilityContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "‚ú® Flame Burst"

[node name="AbilityDescLabel" type="Label" parent="MarginContainer/VBoxContainer/AbilityContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
theme_override_font_sizes/font_size = 10
text = "Deals bonus fire damage"
autowrap_mode = 3
